# RES

./: .devdbrc  .gitignore  Makefile  PyWhatKit_DB.txt  WORKSPACE_SCAFFOLDING_README.md  config.py  docker-compose.yml  implementation_plan.md.resolved  main.py  mainwindow.ui  pyproject.toml  requirements.txt  res.db-shm  res.db-wal  task.md.resolved  walkthrough.md.resolved
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
Archive/: Whatsapp.py  functional_script.py  ui_mainwindow.py
RES_AI_Agent_Team_MD/: 00-team-overview.md  06-qa-test-automation-engineer.md
core/: __init__.py  capacity_tracker.py  database.py  findings_manager.py  models.py  process_engine.py  rollback_manager.py  seeds.py  time_tracker.py
cost_estimator/: README.md  __init__.py  ai_engine.py  cost_model.py  db_writer.py  estimator_app.py  local_model.py  photo_handler.py  severity_classifier.py
docs/: CONTRACTS.md  DEVELOPMENT_STATUS.md  POSTGRES_MIGRATION.md  UAT_CHECKLIST.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: build_windows.ps1
services/: __init__.py  auth_service.py  findings_service.py  notification_service.py  parts_service.py  report_service.py  rollback_service.py  security_service.py  vehicle_service.py
tests/: __init__.py  test_findings_manager.py  test_notifications_security_estimator.py  test_parts_and_reports.py  test_process_engine.py  test_rollback_manager.py  test_time_capacity_tracker.py
ui/: __init__.py  dashboard_widget.py  insurance_dashboard.py  (+6 more)
(+19 files in other folders)
